/*
 * $Id: ChangeLog,v 1.2973 2004/05/22 12:03:18 vouchcac Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-22 15:10 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
   ! fixed hb_xfree() problem in hb_cdxFindBag()

2004-05-22 18:30 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/sourc/rtl/gtwvt/gtwvt.c
  * xharbour/sourc/rtl/gtwvt/wvtcore.c
  * xharbour/sourc/rtl/gtwvt/wvtutils.c 
  * xharbour/include/hbgtwvt.h
    Few functions additions mostly for GDI pimitives and few optimizations. 
   
2004-05-22 01:20 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * contrib/hbzlib/zip.c
    ! minor fix to hb_zipfile() Problem reported by Jose Quintas

2004-05-21 14:29 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/cstruct.prg
    + Added :CopyTo( nTargetPointer ) METHOD.

2004-05-21 23:30 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
   ! fixed buffered ordKeyNo() value

2004-05-21 15:30 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
   * check for bag name in hb_cdxFindTag() (SELF_ORDINFO)

  * xharbour/source/rdd/dbfcdx/dbcmd.c
   ! always initialize atomBagName (to NULL if not necessary)

2004-05-21 07:05 UTC-0400 Sylvain Robert <s.robert/at/videotron.ca>
  * xharbour/contrib/mysql/makefile.vc
    * minor correction

2004-05-21 04:25 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/make_tgz.sh
  * xharbour/xharbour.spec
  * xharbour/utils/xbscript/Makefile
  - xharbour/ppclass.ch
    * updated for recent Ron changes: pp->xbscript

2004-05-20 17:02 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/errorsys.prg
    * Use plain Alert() if MaxCol() is 0 - so that error is always reported.
