@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2973 2004/05/22 12:03:18 vouchcac Exp $
+ * $Id: ChangeLog,v 1.2974 2004/05/22 13:11:45 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-05-22 19:35 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
+  * include/hbdefs.h
+    ! Fixed a warning about redefinition of UINT32 and UINT64 in MinGW.
 
 2004-05-22 15:10 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
   * xharbour/source/rdd/dbfcdx/dbfcdx1.c
